--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ getrandom = { version = "^0.2.8", features = ["js"] }
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
+[dependencies.web-sys]
+version = "0.3"
+features = ["console"]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
