--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ getrandom = { version = "^0.2.8", features = ["js"] }
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+wee_alloc = "0.4.5"
 
 [dependencies.web-sys]
 version = "0.3"
